Proxy Custom File is broken #48916

Closed
opened 2016-07-21 07:13:47 +02:00 by Paulo José Oliveira Amaro · 18 comments

System Information
Ubuntu 16.04

Blender Version
Broken: All from 2.75a c27589e to 2.77a abf6f08
Working: 2.74 000dfc0

Short description of error
The feature Proxy Custom File is not working anymore. The proxy file is just ignored and it shows an scaled version of the input.

Exact steps for others to reproduce the error

  • Add a Movie strip to Sequencer
  • Set Proxy/Timecode, Proxy Custom File and select another video as proxy
  • Set 25% size to be used
  • In View Settings of Image Preview window, set "Proxy render size" to 25%
  • Proxy file is not used

Related Issues
I think it seems to be related with the introduction of the Per Project/Per Strip feature. A file saved with 2.77 and a Proxy Custom File added is not open correctly in 2.74 (before this feature). The option appears unchecked. #38806 was similar, but the new issue is not solved reopening the file.

.Blend with the issue
I believe this blend file has everything to show the issue. It includes a video file and a proxy video file with a grayscale filter, so you can make sure the proxy is not been used:
bug-custom-proxy.tar.gz

Screenshoots
Working in Blender 2.74:
bug-custom-proxy.blend-2.74.png
Broken in Blender 2.77a:
bug-custom-proxy.blend-2.77a.png

**System Information** Ubuntu 16.04 **Blender Version** Broken: All from 2.75a c27589e to 2.77a abf6f08 Working: 2.74 000dfc0 **Short description of error** The feature Proxy Custom File is not working anymore. The proxy file is just ignored and it shows an scaled version of the input. **Exact steps for others to reproduce the error** * Add a Movie strip to Sequencer * Set Proxy/Timecode, Proxy Custom File and select another video as proxy * Set 25% size to be used * In View Settings of Image Preview window, set "Proxy render size" to 25% * Proxy file is not used **Related Issues** I think it seems to be related with the introduction of the **Per Project/Per Strip** feature. A file saved with 2.77 and a Proxy Custom File added is not open correctly in 2.74 (before this feature). The option appears unchecked. #38806 was similar, but the new issue is not solved reopening the file. **.Blend with the issue** I believe this blend file has everything to show the issue. It includes a video file and a proxy video file with a grayscale filter, so you can make sure the proxy is not been used: [bug-custom-proxy.tar.gz](https://archive.blender.org/developer/F325720/bug-custom-proxy.tar.gz) **Screenshoots** Working in Blender 2.74: ![bug-custom-proxy.blend-2.74.png](https://archive.blender.org/developer/F325726/bug-custom-proxy.blend-2.74.png) Broken in Blender 2.77a: ![bug-custom-proxy.blend-2.77a.png](https://archive.blender.org/developer/F325728/bug-custom-proxy.blend-2.77a.png)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @PauloJoseOliveiraAmaro

Added subscriber: @PauloJoseOliveiraAmaro

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Caused by a180c8e2ed

Caused by a180c8e2ed

Added subscriber: @Sergey

Added subscriber: @Sergey

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sergey Sharybin self-assigned this 2016-07-26 17:48:30 +02:00

So it's an intentional change from a year ago. The change explicitly mentions that re-generation of existing proxies is needed, so it's not really a surprise.

To me it doesn't rally sound a bug. Thanks for the report anyway.

So it's an intentional change from a year ago. The change explicitly mentions that re-generation of existing proxies is needed, so it's not really a surprise. To me it doesn't rally sound a bug. Thanks for the report anyway.

So this feature should be removed from the UI, don't you think? Letting it like that really sounds like a bug to me.

So this feature should be removed from the UI, don't you think? Letting it like that really sounds like a bug to me.

Not sure why you remove it? It should work if you generate proxies in a newer blender. Just proxies generated with old blender will not work in new one.

Not sure why you remove it? It should work if you generate proxies in a newer blender. Just proxies generated with old blender will not work in new one.

The UI exposes this as if you could select a custom file (even having a file selector which allows you to select a file).

Selecting this file and rebuilding proxies, ignores this completely, so as far as I can see, this option is no longer used at all.

The UI exposes this as if you could select a custom file (even having a file selector which allows you to select a file). Selecting this file and rebuilding proxies, ignores this completely, so as far as I can see, this option is no longer used at all.

@ideasman42, so we need an option whether we want a suffix or not? :This proxy stuff is going out of control :S

@ideasman42, so we need an option whether we want a suffix or not? :This proxy stuff is going out of control :S

I think this is intended so you can select a file directly, if we no longer want to support that - the option could be removed.

I think this is intended so you can select a file directly, if we no longer want to support that - the option could be removed.

Ok, thinking a bit more in details. Perhaps original change was to allow custom directory to be shared, by adding a suffix to the file. Now, perhaps we can ignore any suffix if there's a custom file specified? Would that support both initial change intention and this report?

Ok, thinking a bit more in details. Perhaps original change was to allow custom directory to be shared, by adding a suffix to the file. Now, perhaps we can ignore any suffix if there's a custom file specified? Would that support both initial change intention and this report?

It seems to me that issue is not finished. Should not it be reopened until a solution comes up?

I'll explain my use of this feature. I used to generate proxies using ffmpeg to external videos (no Blender generated scenes), so I got a very small MP4 files coded in x264, that loads and plays really fast using as a proxy.

I used to apply a filter (in ffmpeg) to make the video sharper, so the change of resolution doesn't lost so much detail using proxies. This way I don't use the generate proxy feature at all and prefer to use a custom file proxy.

This feature could be fixed or removed from the interface. I hope for a fixing, because my projects don't open correct anymore and I'm being forced to use the generate feature (a great feature, by the way). :-(

It seems to me that issue is not finished. Should not it be reopened until a solution comes up? I'll explain my use of this feature. I used to generate proxies using ffmpeg to external videos (no Blender generated scenes), so I got a very small MP4 files coded in x264, that loads and plays really fast using as a proxy. I used to apply a filter (in ffmpeg) to make the video sharper, so the change of resolution doesn't lost so much detail using proxies. This way I don't use the generate proxy feature at all and prefer to use a custom file proxy. This feature could be fixed or removed from the interface. I hope for a fixing, because my projects don't open correct anymore and I'm being forced to use the generate feature (a great feature, by the way). :-(

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

@PauloJoseOliveiraAmaro, will make sure that sequencer doesn't add anything to the filename when using custom file. Think that should solve your problem.

@PauloJoseOliveiraAmaro, will make sure that sequencer doesn't add anything to the filename when using custom file. Think that should solve your problem.

This issue was referenced by d5a0ae00d0

This issue was referenced by d5a0ae00d08897f7066c6f69e130e717dd5654c1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48916
No description provided.