Fix T48916: Proxy Custom File is broken